--- a/config/crd/bases/windtunnel.plantd.org_digitaltwins.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_digitaltwins.yaml
@@ -32,7 +32,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: Spec defines the specifications of the DigitalTwin.
+            description: DigitalTwinSpec defines the desired state of DigitalTwin
             properties:
               experiments:
                 description: Experiments contains the list of Experiment object references
@@ -104,7 +104,7 @@ spec:
                 type: string
             type: object
           status:
-            description: Status defines the status of the DigitalTwin.
+            description: DigitalTwinStatus defines the observed state of DigitalTwin
             type: object
         type: object
     served: true
