--- a/config/crd/bases/windtunnel.plantd.org_loadpatterns.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_loadpatterns.yaml
@@ -32,7 +32,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: Spec defines the specification of the LoadPattern.
+            description: LoadPatternSpec defines the desired state of LoadPattern
             properties:
               maxVUs:
                 description: MaxVUs defines the maximum virtual users for the K6 load
@@ -70,7 +70,7 @@ spec:
             - startRate
             type: object
           status:
-            description: Status defines the status of the LoadPattern.
+            description: LoadPatternStatus defines the observed state of LoadPattern
             type: object
         type: object
     served: true
