--- a/config/plantd/config.yaml
+++ b/config/plantd/config.yaml
@@ -1,21 +1,17 @@
 name: PlantD
 version: 1.0.0
+dataGenerator:
+  defaultImage: ghcr.io/carnegiemellon-plantd/datagenerator:latest
+  backoffLimit: 0
+  # We use the default path where K6 looks for files, do not change it
+  path: /test
+  defaultStorageSize: 2Gi
 costService:
   image: ghcr.io/carnegiemellon-plantd/costexporter:latest
   opencost:
     url: http://opencost.plantd-operator-system.svc.cluster.local:9003
 digitalTwin:
   image: ghcr.io/carnegiemellon-plantd/digitaltwin:latest
-dataGenerator:
-  # Image name of the data generator
-  image: ghcr.io/carnegiemellon-plantd/datagenerator:latest
-  # Maximum number of backoff retries the for the data generatitor
-  backoffLimit: 0
-  cpu.request: 250m
-  cpu.limit: 1000m
-  storageSize: 10Gi
-  # We use the default path where K6 looks for files, do not change it
-  path: /test
 plantDCore:
   serviceAccountName: plantd-operator-controller-manager
   kubeProxy:
